<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        tools:context="com.gdgcoimbra.justjava.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:textSize="17sp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/coffee_toppings"
                android:textSize="19sp"
                android:textColor="@android:color/darker_gray"
                android:textAllCaps="true"/>

        <CheckBox
                android:id="@+id/cb_whipped_cream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:checked="false"
                android:text="@string/topping_whipped_cream"
                android:textSize="17sp"/>

        <CheckBox
                android:id="@+id/cb_chocolate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:checked="false"
                android:text="@string/topping_chocolate"
                android:textSize="17sp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/coffee_quantity"
                android:textSize="19sp"
                android:textColor="@android:color/darker_gray"
                android:textAllCaps="true"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_gravity="center"
                android:orientation="horizontal">

            <Button
                    android:id="@+id/btn_minus"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="-"
                    android:textSize="19sp"
                    android:onClick="onMinusButtonClicked"/>

            <TextView
                    android:id="@+id/tv_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="0"
                    android:textSize="19sp"/>

            <Button
                    android:id="@+id/btn_plus"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:text="+"
                    android:textSize="19sp"
                    android:onClick="onPlusButtonClicked"/>
        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/coffee_price"
                android:textSize="19sp"
                android:textColor="@android:color/darker_gray"
                android:textAllCaps="true"/>

        <TextView
                android:id="@+id/price_per_coffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10$"
                android:textSize="17sp"
                android:textColor="@android:color/black"/>

        <TextView
                android:id="@+id/tv_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textColor="@android:color/black"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="ORDER"
                android:onClick="onOrderClicked"/>
    </LinearLayout>
</ScrollView>